# recommenders-tensorflow

./: BasicTwoTowerModelRanking.ipynb  BasicTwoTowerModelRetrieval.ipynb  BasicTwoTowerModels.ipynb  README.md  main.py  pyproject.toml  tests.ipynb
