[project]
name = "recommenders-tensorflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyzmq>=27.1.0",
    "scann>=1.3.0",
    "tensorflow==2.15.0",
    "tensorflow-datasets>=4.9.9",
    "tensorflow-recommenders>=0.7.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
